Added the private endpoints for items modification

--- a/example_config.json
+++ b/example_config.json
@@ -1,1 +1,177 @@
-[["setup",true],["title","Hello Coffee"],["name","Hello Coffee"],["navTitle","HELLO COFFEE"],["categories",[{"tag":"drinks","name":"Drinks"},{"tag":"dishes","name":"Dishes"},{"tag":"liquors","name":"Liquors"},{"tag":"sausages","name":"Sausages"},{"tag":"meats","name":"Meats"}]],["items",[{"id":0,"type":"drinks","image":"http://cdn.ebaumsworld.com/mediaFiles/picture/1035099/85708057.jpg","name":"Example 1","description":"Drink to drink","price":"$1","allergens":"IDK 😅"},{"id":1,"type":"drinks","image":"http://www.dumpaday.com/wp-content/uploads/2019/12/pictures-10-2.jpg","name":"Example 2","description":"Drink to drink","price":"$1","allergens":"IDK 😛"},{"id":2,"type":"dishes","image":"http://www.dumpaday.com/wp-content/uploads/2019/04/the-random-pics-495.jpg","name":"Example 3","description":"Lorem ipsum dolor...","price":"$1","allergens":"IDK 🥲"},{"id":3,"type":"dishes","image":"http://images4.fanpop.com/image/photos/23700000/Funny-random-23797915-1000-981.jpg","name":"Example 4","description":"Lorem ipsum dolor...","price":"$1","allergens":"IDK 🥲"},{"id":4,"type":"liquors","image":"https://yt3.ggpht.com/a/AATXAJzsHPys1EoSnxprcPapwsQsb1gr97KzKfnRBw=s900-c-k-c0xffffffff-no-rj-mo","name":"Example 5","description":"Lorem ipsum dolor...","price":"$1","allergens":"-"},{"id":5,"type":"liquors","image":"https://laughingsquid.com/wp-content/uploads/2019/12/cat-mountain-animalsinthings.jpg","name":"Example 6","description":"Lorem ipsum dolor...","price":"$1","allergens":"-"},{"id":6,"type":"sausages","image":"https://i.pinimg.com/736x/5f/d1/9a/5fd19a789854b87701b9200c45f210bf.jpg","name":"Example 7","description":"Lorem ipsum dolor...","price":"$1","allergens":"IDK 😎"},{"id":7,"type":"sausages","image":"https://pm1.narvii.com/7119/b0abdf491cffde4bdf95850956c1b15a5591a4b5r1-712-707v2_hq.jpg","name":"Example 8","description":"Lorem ipsum dolor...","price":"$1","allergens":"IDK 😎"},{"id":8,"type":"meats","image":"http://bucket.trending.com/trending/imgur/2017-08-09/funny-random-meme-dump_FgQ1Arr.png","name":"Example 9","description":"Lorem ipsum dolor...","price":"$1","allergens":"IDK 😜"},{"id":9,"type":"meats","image":"https://sensilab.monash.edu/new-sensilab/wp-content/uploads/2017/08/4949794-random-image.jpg","name":"Example 10","description":"Lorem ipsum dolor...","price":"$1","allergens":"IDK 😜"}]],["extraInfo",["This is some info!","This is more info!"]],["legalNotice","Coffee™"],["masterKey",""],["tempKey",null],["sessionTime",null], ["hostname",null],["port",null], ["publicAPI",false], ["id",""]]
+[
+    [
+        "setup",
+        true
+    ],
+    [
+        "title",
+        "Hello Coffee"
+    ],
+    [
+        "name",
+        "Hello Coffee"
+    ],
+    [
+        "navTitle",
+        "HELLO COFFEE"
+    ],
+    [
+        "categories",
+        [
+            {
+                "tag": "drinks",
+                "name": "Drinks"
+            },
+            {
+                "tag": "dishes",
+                "name": "Dishes"
+            },
+            {
+                "tag": "liquors",
+                "name": "Liquors"
+            },
+            {
+                "tag": "sausages",
+                "name": "Sausages"
+            },
+            {
+                "tag": "meats",
+                "name": "Meats"
+            }
+        ]
+    ],
+    [
+        "items",
+        [
+            {
+                "id": 0,
+                "type": "drinks",
+                "image": "http://cdn.ebaumsworld.com/mediaFiles/picture/1035099/85708057.jpg",
+                "name": "Example 1",
+                "description": "Drink to drink",
+                "price": "$1",
+                "allergens": "IDK 😅"
+            },
+            {
+                "id": 1,
+                "type": "drinks",
+                "image": "http://www.dumpaday.com/wp-content/uploads/2019/12/pictures-10-2.jpg",
+                "name": "Example 2",
+                "description": "Drink to drink",
+                "price": "$1",
+                "allergens": "IDK 😛"
+            },
+            {
+                "id": 2,
+                "type": "dishes",
+                "image": "http://www.dumpaday.com/wp-content/uploads/2019/04/the-random-pics-495.jpg",
+                "name": "Example 3",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "IDK 🥲"
+            },
+            {
+                "id": 3,
+                "type": "dishes",
+                "image": "http://images4.fanpop.com/image/photos/23700000/Funny-random-23797915-1000-981.jpg",
+                "name": "Example 4",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "IDK 🥲"
+            },
+            {
+                "id": 4,
+                "type": "liquors",
+                "image": "https://yt3.ggpht.com/a/AATXAJzsHPys1EoSnxprcPapwsQsb1gr97KzKfnRBw=s900-c-k-c0xffffffff-no-rj-mo",
+                "name": "Example 5",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "-"
+            },
+            {
+                "id": 5,
+                "type": "liquors",
+                "image": "https://laughingsquid.com/wp-content/uploads/2019/12/cat-mountain-animalsinthings.jpg",
+                "name": "Example 6",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "-"
+            },
+            {
+                "id": 6,
+                "type": "sausages",
+                "image": "https://i.pinimg.com/736x/5f/d1/9a/5fd19a789854b87701b9200c45f210bf.jpg",
+                "name": "Example 7",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "IDK 😎"
+            },
+            {
+                "id": 7,
+                "type": "sausages",
+                "image": "https://pm1.narvii.com/7119/b0abdf491cffde4bdf95850956c1b15a5591a4b5r1-712-707v2_hq.jpg",
+                "name": "Example 8",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "IDK 😎"
+            },
+            {
+                "id": 8,
+                "type": "meats",
+                "image": "http://bucket.trending.com/trending/imgur/2017-08-09/funny-random-meme-dump_FgQ1Arr.png",
+                "name": "Example 9",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "IDK 😜"
+            },
+            {
+                "id": 9,
+                "type": "meats",
+                "image": "https://sensilab.monash.edu/new-sensilab/wp-content/uploads/2017/08/4949794-random-image.jpg",
+                "name": "Example 10",
+                "description": "Lorem ipsum dolor...",
+                "price": "$1",
+                "allergens": "IDK 😜"
+            }
+        ]
+    ],
+    [
+        "extraInfo",
+        [
+            "This is some info!",
+            "This is more info!"
+        ]
+    ],
+    [
+        "legalNotice",
+        "Coffee™"
+    ],
+    [
+        "masterKey",
+        ""
+    ],
+    [
+        "tempKey",
+        null
+    ],
+    [
+        "sessionTime",
+        null
+    ],
+    [
+        "hostname",
+        null
+    ],
+    [
+        "port",
+        null
+    ],
+    [
+        "publicAPI",
+        false
+    ],
+    [
+        "id",
+        ""
+    ]
+]
